Fixed various margin and padding spacing

--- a/app.css
+++ b/app.css
@@ -597,10 +597,6 @@ video {
   bottom: 0px;
 }
 
-.-top-3 {
-  top: -0.75rem;
-}
-
 .-top-40 {
   top: -10rem;
 }
@@ -637,20 +633,12 @@ video {
   top: 50%;
 }
 
-.top-\[calc\(100\%-13rem\)\] {
-  top: calc(100% - 13rem);
-}
-
-.top-1\.5 {
-  top: 0.375rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
 .top-6 {
   top: 1.5rem;
+}
+
+.top-\[calc\(100\%-13rem\)\] {
+  top: calc(100% - 13rem);
 }
 
 .isolate {
@@ -736,6 +724,14 @@ video {
   margin-left: max(50%,38rem);
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -772,12 +768,8 @@ video {
   margin-top: 2rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mt-0\.5 {
-  margin-top: 0.125rem;
+.mt-24 {
+  margin-top: 6rem;
 }
 
 .block {
@@ -876,12 +868,12 @@ video {
   width: 36.125rem;
 }
 
-.w-\[72\.1875rem\] {
-  width: 72.1875rem;
-}
-
 .w-\[82\.0625rem\] {
   width: 82.0625rem;
+}
+
+.w-\[98\.1875rem\] {
+  width: 98.1875rem;
 }
 
 .w-auto {
@@ -890,10 +882,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[98\.1875rem\] {
-  width: 98.1875rem;
 }
 
 .max-w-2xl {
@@ -1293,6 +1281,11 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .py-32 {
   padding-top: 8rem;
   padding-bottom: 8rem;
@@ -1336,10 +1329,6 @@ video {
   padding-top: 4rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1350,6 +1339,10 @@ video {
 
 .pt-\[7\%\] {
   padding-top: 7%;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-left {
@@ -1476,6 +1469,11 @@ video {
   color: rgb(163 230 53 / var(--tw-text-opacity));
 }
 
+.text-lime-500 {
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+
 .text-lime-600 {
   --tw-text-opacity: 1;
   color: rgb(101 163 13 / var(--tw-text-opacity));
@@ -1484,11 +1482,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-lime-500 {
-  --tw-text-opacity: 1;
-  color: rgb(132 204 22 / var(--tw-text-opacity));
 }
 
 .text-opacity-50 {
@@ -1659,10 +1652,6 @@ video {
   outline-color: #65a30d;
 }
 
-.focus-visible\:outline-orange-500:focus-visible {
-  outline-color: #f97316;
-}
-
 .active\:bg-lime-600:active {
   --tw-bg-opacity: 1;
   background-color: rgb(101 163 13 / var(--tw-bg-opacity));
@@ -1718,6 +1707,10 @@ video {
     display: flex;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
   .sm\:h-12 {
     height: 3rem;
   }
@@ -1749,6 +1742,22 @@ video {
   .sm\:rounded-b-none {
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
+  }
+
+  .sm\:border-t-0 {
+    border-top-width: 0px;
+  }
+
+  .sm\:border-t-4 {
+    border-top-width: 4px;
+  }
+
+  .sm\:border-none {
+    border-style: none;
+  }
+
+  .sm\:border-transparent {
+    border-color: transparent;
   }
 
   .sm\:bg-white {
@@ -1848,6 +1857,10 @@ video {
 
   .md\:mt-24 {
     margin-top: 6rem;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:grid {
